[project]
name = "ai-codereview-gitlab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler==3.10.4",
    "flask==3.0.3",
    "httpx[socks]>=0.28.1",
    "jinja2==3.1.4",
    "lizard==1.17.20",
    "matplotlib==3.10.1",
    "ollama==0.4.7",
    "openai==1.59.3",
    "pandas==2.2.3",
    "pathspec==0.12.1",
    "pymysql==1.1.1",
    "python-gitlab==5.6.0",
    "requests==2.32.3",
    "rq==2.1.0",
    "spark-ai-python==0.4.5",
    "streamlit==1.42.2",
    "streamlit-cookies-manager==0.2.0",
    "tiktoken==0.9.0",
    "zhipuai==2.1.5.20230904",
]
